# fastapi-template

./: .env-example  README.md  compose.yaml  dockerfile  dockerfile.dev  pyproject.toml
fastapi_template/: __init__.py  config.py  main.py  run.py
fastapi_template/api/: __init__.py  __main__.py  app.py
fastapi_template/api/v1/: __init__.py  router.py
fastapi_template/api/v1/endpoints/: __init__.py  hello_world.py
