[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "Template for a FastAPI Project"
authors = ["Alberto Castañeiras <alberto@casta.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
